Pull request #54: correct alignment on conservation practice header
Merge in NRCSAPPS/cpdifrontend from defect/CIGCPDPH2-1578-on-this-page-spacing to develop

Squashed commit of the following:

commit e714f7f262a76c21fc0605eabbb44d73f7fb1da8
Author: Bo Peng <Bo.Peng@usda.gov>
Date:   Fri Dec 22 13:07:14 2023 -0500

    correct alignment on conservation practice header

--- a/src/components/HorizontalScroll/horizontal-scroll.scss
+++ b/src/components/HorizontalScroll/horizontal-scroll.scss
@@ -42,9 +42,9 @@
     display: flex;
     overflow-x: auto;
     margin: 0 2.188rem 0 2.188rem;
+    align-items: center;
 
     .title {
-      padding: 1.25rem 0 0 0;
       min-width: max-content;
     }
 
